--- a/app/styles/partials/_navbar_mobile.scss
+++ b/app/styles/partials/_navbar_mobile.scss
@@ -1,6 +1,6 @@
 // ? Styles Navbar Mobile
 
-@media (min-width:320px) {
+@media screen and (min-width:320px) {
     #container-general__navbar-mobile {
         /* border: 2px solid red; */
         display: flex;
@@ -80,6 +80,7 @@
         padding: 2.2rem;
         color: #e7e5e4;
         font-weight: 300;
+        text-decoration: none;
 
         &::selection {
             background-color: transparent;
@@ -102,6 +103,7 @@
     .logo-social-media__navbar-mobile {
         height: 100%;
         width: 100%;
+        color: white;
     }
 }
 
@@ -121,12 +123,22 @@
 
 
 @media screen and (min-width:375px) {
+    .item-list-navbar-mobile {
+        font-size: 18px;
+    }
+
     .containers-navbar:nth-child(1) {
         padding: 1rem;
     }
 
     .containers-navbar:nth-child(2) {
         padding: 1rem;
+    }
+}
+
+@media screen and (min-width:414px) {
+    .item-list-navbar-mobile {
+        font-size: 20px;
     }
 }
 
