--- a/app/styles/partials/_formContact.scss
+++ b/app/styles/partials/_formContact.scss
@@ -26,13 +26,19 @@
         color: #d1d5db;
         font-weight: 300;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding-left: 5px;
     }
 
     #form-contact__Home-P4 textarea {
         height: 12rem;
     }
 
-    .input-contact-form{
-        border: 2px solid red;
+    #form-contact__Home-P4 button {
+        background-color: #5b21b6;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: white;
+        padding: 10px;
+        width: 50%;
+        border-radius: 30px;
+        font-weight: 400;
     }
 }
