--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -457,7 +457,7 @@
   #container-texto__home__P1 {
     position: relative;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: .5rem;
     color: white;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -523,7 +523,7 @@
     margin-top: 5px;
   }
   #container-texto__home__P1 {
-    margin-top: .5rem;
+    margin-top: .3rem;
     padding: 1.4rem;
   }
   #texto-home__P1 {
@@ -561,7 +561,7 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
     background: linear-gradient(to top left, #0c0c0c, black);
     z-index: 1;
@@ -623,7 +623,7 @@
 @media screen and (min-width: 360px) {
   #container-general__Home-P3 {
     /* border: 2px solid red; */
-    height: 100vh;
+    min-height: 100vh;
     background-color: white;
     border: none;
     z-index: 1;
@@ -733,13 +733,14 @@
     gap: .5rem;
     background: -webkit-gradient(linear, right bottom, left top, from(#0c0c0c), to(black));
     background: linear-gradient(to top left, #0c0c0c, black);
-    margin-top: 1rem;
     color: white;
+    margin-top: 1rem;
   }
   #titulo-ver-mas__Home-P3 {
     font-weight: 300;
     font-size: 16px;
     padding: 1.5rem 0;
+    text-decoration: none;
   }
   @-webkit-keyframes slide {
     0% {
@@ -792,7 +793,6 @@
   #container-general__Home-P4 {
     /*  border: 2px solid blue; */
     background-color: #f1f1f1;
-    margin-top: 1.9rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -803,7 +803,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    min-height: 60vh;
+    min-height: 130vh;
     z-index: 2;
   }
   #titulo-contacto__Home-P4 {
@@ -894,13 +894,22 @@
     margin: 0 1rem;
     text-align: center;
     color: #262626;
+    font-weight: 700;
   }
-}
-
-@media screen and (min-width: 414px) {
-  #container-general__Home-P4 {
-    /* border: 2px solid green; */
-    margin-top: 4rem;
+  .hr {
+    width: 100%;
+    border: 1.5px solid black;
+    margin: 10px 0;
+  }
+  .hr:nth-of-type(1) {
+    width: 70%;
+  }
+  .hr:nth-of-type(2) {
+    width: 50%;
+  }
+  .hr:nth-of-type(3) {
+    width: 30%;
+    margin-bottom: 2rem;
   }
 }
 
@@ -935,30 +944,40 @@
     color: #d1d5db;
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 5px;
   }
   #form-contact__Home-P4 input:-ms-input-placeholder,
   textarea:-ms-input-placeholder {
     color: #d1d5db;
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 5px;
   }
   #form-contact__Home-P4 input::-ms-input-placeholder,
   textarea::-ms-input-placeholder {
     color: #d1d5db;
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 5px;
   }
   #form-contact__Home-P4 input::placeholder,
   textarea::placeholder {
     color: #d1d5db;
     font-weight: 300;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 5px;
   }
   #form-contact__Home-P4 textarea {
     height: 12rem;
   }
-  .input-contact-form {
-    border: 2px solid red;
+  #form-contact__Home-P4 button {
+    background-color: #5b21b6;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    padding: 10px;
+    width: 50%;
+    border-radius: 30px;
+    font-weight: 400;
   }
 }
 /*# sourceMappingURL=styles.css.map */
