mas correcioones en produccion

--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -91,6 +91,7 @@
         background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
         color: white;
         margin-top: 1rem;
+        text-decoration: none;
     }
 
     #titulo-ver-mas__Home-P3 {
