--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -57,6 +57,8 @@
     .item-grid-socialMedia__Home-P4 h3 {
         font-weight: 600;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        text-decoration: none;
+        font-size: 16px;
     }
 
     /* Estilos para cada contenedor de Social Media */
