--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -735,6 +735,7 @@
     background: linear-gradient(to top left, #0c0c0c, black);
     color: white;
     margin-top: 1rem;
+    text-decoration: none;
   }
   #titulo-ver-mas__Home-P3 {
     font-weight: 300;
@@ -860,6 +861,8 @@
   .item-grid-socialMedia__Home-P4 h3 {
     font-weight: 600;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    font-size: 16px;
   }
   /* Estilos para cada contenedor de Social Media */
   .item-grid-socialMedia__Home-P4:nth-child(1) {
