--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -5,4 +5,5 @@
 @import './partials/home_p2';
 @import './partials/home_p3';
 @import './partials/home_p4';
-@import './partials//formContact';
+@import './partials/formContact';
+@import './partials/footer';
