--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -1,7 +1,46 @@
 //? Estilos de Footer
 
 @media screen and (min-width:360px) {
-    #container-general__Footer{
-        height: 100vh;
+    #container-general__Footer {
+        height: 14vh;
+        background-color: #141414;
+        color: white;
+        padding: 1.5rem;
+        display: flex;
+        gap: .5rem;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    #container-nameAndLogo__Footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: .1rem;
+    }
+
+    #container-2__footer {
+        display: flex;
+        flex-direction: column;
+        gap: .7rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .text-footer__footer {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        /* text-wrap:balance; */
+        font-weight: 200;
+    }
+
+    #logo-copyright__footer {
+        width: 1.1rem;
+        height: 1.1rem;
+    }
+
+    .text-footer__footer:nth-child(3){
+        color: #9ca3af;
+        font-family: 13px;
     }
 }
