--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -4,11 +4,10 @@
     #container-general__Home-P4 {
         /*  border: 2px solid blue; */
         background-color: #f1f1f1;
-
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-height: 130vh;
+        min-height: 125vh;
         z-index: 2;
     }
 
@@ -26,14 +25,14 @@
         display: grid;
         width: 100%;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 4.7rem);
         gap: 10px;
         margin: 2.5rem 0;
     }
 
     .item-grid-socialMedia__Home-P4 {
         /*  border: 2px solid red; */
-        background-color: #e0e0e0e8;
+        background-color: #111111e0;
         padding: 20px;
         display: flex;
         gap: .1rem;
@@ -61,11 +60,11 @@
         font-weight: 600;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 16px;
-        margin-top: 6px;
+        margin-top: 5px;
     }
 
     .text-instagram {
-        background-image: linear-gradient(to right, #D64EC1, #822D78, #833ab4, #c13584, #D64EC1, #833ab4);
+        background-image: linear-gradient(to right, #D64EC1, #9e2a91, #9833ac, #c13584, #D64EC1, #833ab4);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
@@ -82,7 +81,7 @@
     }
 
     .item-grid-socialMedia__Home-P4:nth-child(3) {
-        color: #505050;
+        color: #cacaca;
     }
 
     .item-grid-socialMedia__Home-P4:nth-child(4) {
