--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -814,7 +814,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    min-height: 130vh;
+    min-height: 125vh;
     z-index: 2;
   }
   #titulo-contacto__Home-P4 {
@@ -833,14 +833,14 @@
     width: 100%;
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
+    -ms-grid-rows: (4.7rem)[2];
+        grid-template-rows: repeat(2, 4.7rem);
     gap: 10px;
     margin: 2.5rem 0;
   }
   .item-grid-socialMedia__Home-P4 {
     /*  border: 2px solid red; */
-    background-color: #e0e0e0e8;
+    background-color: #111111e0;
     padding: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -875,11 +875,11 @@
     font-weight: 600;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
-    margin-top: 6px;
+    margin-top: 5px;
   }
   .text-instagram {
-    background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#822D78), color-stop(#833ab4), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
-    background-image: linear-gradient(to right, #D64EC1, #822D78, #833ab4, #c13584, #D64EC1, #833ab4);
+    background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#9e2a91), color-stop(#9833ac), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
+    background-image: linear-gradient(to right, #D64EC1, #9e2a91, #9833ac, #c13584, #D64EC1, #833ab4);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -893,7 +893,7 @@
     color: #2B7DBE;
   }
   .item-grid-socialMedia__Home-P4:nth-child(3) {
-    color: #505050;
+    color: #cacaca;
   }
   .item-grid-socialMedia__Home-P4:nth-child(4) {
     color: #64C351;
@@ -1013,7 +1013,63 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Footer {
-    height: 100vh;
+    height: 14vh;
+    background-color: #141414;
+    color: white;
+    padding: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: .5rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  #container-nameAndLogo__Footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: .1rem;
+  }
+  #container-2__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: .7rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .text-footer__footer {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* text-wrap:balance; */
+    font-weight: 200;
+  }
+  #logo-copyright__footer {
+    width: 1.1rem;
+    height: 1.1rem;
+  }
+  .text-footer__footer:nth-child(3) {
+    color: #9ca3af;
+    font-family: 13px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
