--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1066,6 +1066,70 @@
   #logo-copyright__footer {
     width: 1.1rem;
     height: 1.1rem;
+    margin-top: 2px;
+  }
+  .text-footer__footer:nth-child(3) {
+    color: #9ca3af;
+    font-family: 13px;
+  }
+}
+
+@media screen and (min-width: 414px) {
+  #container-general__Footer {
+    height: 14vh;
+    background-color: #141414;
+    color: white;
+    padding: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: .5rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  #container-nameAndLogo__Footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: .1rem;
+  }
+  #container-2__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: .7rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .text-footer__footer {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* text-wrap:balance; */
+    font-weight: 200;
+  }
+  #logo-copyright__footer {
+    width: 1.1rem;
+    height: 1.1rem;
+    margin-top: 2px;
   }
   .text-footer__footer:nth-child(3) {
     color: #9ca3af;
