--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -2,7 +2,7 @@
 
 @media screen and (min-width:360px) {
     #container-general__Footer {
-        min-height: 14vh;
+        min-height: 15vh;
         background-color: #141414;
         color: white;
         padding: 1.5rem;
@@ -32,6 +32,7 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         /* text-wrap:balance; */
         font-weight: 200;
+        font-size:11px;
     }
 
     #logo-copyright__footer {
@@ -42,11 +43,14 @@
 
     .text-footer__footer:nth-child(3){
         color: #9ca3af;
-        font-size: 13px;
+        font-size: 10px;
     }
 }
 
 @media screen and (min-width:414px) {
+    #container-general__Footer {
+        min-height: 18vh;
+    }
     .text-footer__footer {
         font-weight: 200;
         font-size:11px
