--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1013,7 +1013,7 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Footer {
-    height: 14vh;
+    min-height: 15vh;
     background-color: #141414;
     color: white;
     padding: 1.5rem;
@@ -1062,6 +1062,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* text-wrap:balance; */
     font-weight: 200;
+    font-size: 11px;
   }
   #logo-copyright__footer {
     width: 1.1rem;
@@ -1070,61 +1071,17 @@
   }
   .text-footer__footer:nth-child(3) {
     color: #9ca3af;
-    font-family: 13px;
+    font-size: 10px;
   }
 }
 
 @media screen and (min-width: 414px) {
   #container-general__Footer {
-    height: 14vh;
-    background-color: #141414;
-    color: white;
-    padding: 1.5rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: .5rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  #container-nameAndLogo__Footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: .1rem;
-  }
-  #container-2__footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: .7rem;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    min-height: 18vh;
   }
   .text-footer__footer {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* text-wrap:balance; */
     font-weight: 200;
+    font-size: 11px;
   }
   #logo-copyright__footer {
     width: 1.1rem;
@@ -1133,7 +1090,7 @@
   }
   .text-footer__footer:nth-child(3) {
     color: #9ca3af;
-    font-family: 13px;
+    font-size: 10px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
