--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -32,17 +32,18 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         /* text-wrap:balance; */
         font-weight: 200;
-        font-size:14px;
+        font-size:17px;
     }
 
     #logo-copyright__footer {
         width: 1.1rem;
         height: 1.1rem;
+        margin-bottom: .5rem;
     }
 
     .text-footer__footer:nth-child(3){
         color: #9ca3af;
-        font-size: 13px;
+        font-size: 16px;
     }
 }
 
