--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -21,23 +21,28 @@
         margin: 1.7rem .4rem 1rem 1rem;
     }
 
+    /* Estilos del componente 'Social Media Grid' */
     .contenedor-grid-socialMedia__Home-P4 {
-        display: grid;
+        /* border: 2px solid blue; */
+        margin: 1.5rem 0;
         width: 100%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 4.7rem);
-        gap: 10px;
-        margin: 2.5rem 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: .4rem;
     }
 
     .item-grid-socialMedia__Home-P4 {
         /*  border: 2px solid red; */
         background-color: #111111e0;
-        padding: 20px;
+        padding: 10px;
         display: flex;
         gap: .1rem;
         align-items: center;
         text-decoration: none;
+        border-radius: 15px;
+        width: 95%;
     }
 
     .cont-logo-socialMed__Home-P4 {
@@ -60,7 +65,6 @@
         font-weight: 600;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 14px;
-        margin-top: 7px;
     }
 
     .text-instagram {
