--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -827,21 +827,30 @@
             animation: textColor 8s infinite;
     margin: 1.7rem .4rem 1rem 1rem;
   }
+  /* Estilos del componente 'Social Media Grid' */
   .contenedor-grid-socialMedia__Home-P4 {
-    display: -ms-grid;
-    display: grid;
+    /* border: 2px solid blue; */
+    margin: 1.5rem 0;
     width: 100%;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (4.7rem)[2];
-        grid-template-rows: repeat(2, 4.7rem);
-    gap: 10px;
-    margin: 2.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: .4rem;
   }
   .item-grid-socialMedia__Home-P4 {
     /*  border: 2px solid red; */
     background-color: #111111e0;
-    padding: 20px;
+    padding: 10px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -850,6 +859,8 @@
         -ms-flex-align: center;
             align-items: center;
     text-decoration: none;
+    border-radius: 15px;
+    width: 95%;
   }
   .cont-logo-socialMed__Home-P4 {
     /* border: 2px solid green; */
@@ -875,7 +886,6 @@
     font-weight: 600;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
-    margin-top: 7px;
   }
   .text-instagram {
     background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#9e2a91), color-stop(#9833ac), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
