--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -14,6 +14,7 @@
     }
 
     #container-nameAndLogo__Footer {
+        border: 2px solid greenyellow;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -21,6 +22,7 @@
     }
 
     #container-2__footer {
+        border: 2px solid slateblue;
         display: flex;
         flex-direction: column;
         gap: .7rem;
@@ -36,8 +38,10 @@
     }
 
     #logo-copyright__footer {
+        border: 2px solid darkred;
         width: 1.1rem;
         height: 1.1rem;
+        margin-bottom: .5rem;
     }
 
     .text-footer__footer:nth-child(3){
