--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -886,6 +886,7 @@
     font-weight: 600;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
+    margin-top: 8px;
   }
   .text-instagram {
     background-image: -webkit-gradient(linear, left top, right top, from(#D64EC1), color-stop(#9e2a91), color-stop(#9833ac), color-stop(#c13584), color-stop(#D64EC1), to(#833ab4));
@@ -1041,6 +1042,7 @@
         flex-wrap: wrap;
   }
   #container-nameAndLogo__Footer {
+    border: 2px solid greenyellow;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1053,6 +1055,7 @@
     gap: .1rem;
   }
   #container-2__footer {
+    border: 2px solid slateblue;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1075,8 +1078,10 @@
     font-size: 14px;
   }
   #logo-copyright__footer {
+    border: 2px solid darkred;
     width: 1.1rem;
     height: 1.1rem;
+    margin-bottom: .5rem;
   }
   .text-footer__footer:nth-child(3) {
     color: #9ca3af;
