resolucion 768px - in progress

--- a/app/styles/partials/_home_p2.scss
+++ b/app/styles/partials/_home_p2.scss
@@ -57,3 +57,12 @@
         color: #404040;
     }
 }
+
+@media screen and (min-width:768px) {
+    #container-frotned__Home-P2 {
+        border: 2px solid blue;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
