Home P3 - Listo para 768px

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -663,15 +663,51 @@
 }
 
 @media screen and (min-width: 768px) {
-  #container-frotned__Home-P2 {
-    border: 2px solid blue;
+  #container-general__Home__P2 {
+    /* border: 2px solid green; */
+    min-height: 80vh;
+  }
+  .container-skills__Home-P2 {
+    /* border: 2px solid blue; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: .3rem;
+  }
+  .cont-eachSkill__Home-P2 {
+    /* border: 2px solid red; */
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: .5rem 1rem;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+  }
+  .cont-eachSkill__Home-P2:hover {
+    color: blue !important;
+    cursor: crosshair;
+  }
+  .container-GeneralSkill__Home-P2 {
+    /* border: 3px solid seagreen; */
+    padding: 1.5rem;
+  }
+  .titulo-stack__Home-P2 {
+    margin: 1rem 0;
+  }
+  .nombre-skill {
+    font-size: 19px;
+    margin-left: 0rem;
+  }
+  .logo-skill {
+    /* border: 2px solid red; */
+    height: 5rem;
+    width: 5rem;
+    padding: .6rem;
   }
 }
 
