--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -15,7 +15,6 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-top: 2rem;
         color: #9333ea;
-        ;
     }
 
     //? Contenedor de las cards de los proyectos
@@ -130,6 +129,68 @@
 
     .card-project__Home-P3 {
         /* border: 2px solid firebrick; */
-        height: 13.5rem;     
+        height: 13.5rem;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #contenedor-cards-projects__Home-P3 {
+        /* border: 2px solid darkred; */
+        align-items: center;
+        padding: 1.5rem;
+    }
+
+    .card-project__Home-P3 {
+        width: 90%;
+        border-radius: 10px;
+        justify-content: flex-start;
+        margin-left: 1.5rem;
+    }
+
+    .container-refs__Home-P3 {
+        /* border: 2px solid green; */
+        flex-direction: column;
+        justify-content: center;
+        position: absolute;
+        right: 44rem;
+        gap: 1.5rem;
+    }
+
+    .cont-ref__Home-P3 {
+        border: 2.5px solid gray;
+        height: 3.2rem;
+        width: 3.2rem;
+        background-color: rgba(0, 0, 0, 0.925);
+    }
+
+    .card-project__Home-P3 {
+        /* border: 2px solid firebrick; */
+        height: 22rem;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0);
+        }
+    }
+
+    #titulo-proyectos__Home-P3 {
+        font-size: 2.2rem;
+    }
+
+    .nombre_card_project__Home-P3 {
+        font-size: 1.4rem;
+        padding: 1.5rem;
+        font-weight: 400;
+        width: 53%;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.911);
+        margin-top: 5rem;
+        border-radius: 30px 5px 0px 30px;
+        transition: .5s ease;
+        &:hover{
+            background-color: rgba(255, 255, 255, 0.534);
+            color: black;
+            font-weight: bold;
+            width: 57%;
+        }
     }
 }
