--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -83,6 +83,7 @@
     }
 
     #container-ver-mas-proyectos__Home-P3 {
+        /* border: 2px solid red; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -90,13 +91,14 @@
         background: linear-gradient(to top left, rgb(12, 12, 12), rgb(0, 0, 0));
         color: white;
         margin-top: 1rem;
+        padding: 1rem;
         text-decoration: none;
     }
 
     #titulo-ver-mas__Home-P3 {
-        font-weight: 300;
-        font-size: 16px;
-        padding: 1.5rem 0;
+        /* border: 2px solid saddlebrown; */
+        font-weight: 400;
+        font-size: 1rem;
         text-decoration: none;
     }
 
@@ -186,11 +188,20 @@
         margin-top: 5rem;
         border-radius: 30px 5px 0px 30px;
         transition: .5s ease;
-        &:hover{
+
+        &:hover {
             background-color: rgba(255, 255, 255, 0.534);
             color: black;
             font-weight: bold;
             width: 57%;
         }
+    }
+
+    #container-ver-mas-proyectos__Home-P3 {
+        padding: 1.7rem;
+    }
+
+    #titulo-ver-mas__Home-P3 {
+        font-size: 1.3rem;
     }
 }
