--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -6,4 +6,5 @@
 @import './partials/home_p3';
 @import './partials/home_p4';
 @import './partials/formContact';
+@import './partials/socialMediaGrid';
 @import './partials/footer';
