--- a/app/styles/partials/_formContact.scss
+++ b/app/styles/partials/_formContact.scss
@@ -34,11 +34,40 @@
     }
 
     #form-contact__Home-P4 button {
-        background-color: #5b21b6;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background-color: #5b21b6;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         color: white;
         padding: 10px;
         width: 50%;
         border-radius: 30px;
         font-weight: 400;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #form-contact__Home-P4 {
+        /* border: 2px solid red; */
+        margin: 0rem 0;
+        width: 80%;
+        gap: 1.7rem;
+        padding: 2rem;
+    }
+
+    #form-contact__Home-P4 textarea {
+        height: 17rem;
+    }
+
+    #form-contact__Home-P4 input::placeholder,
+    textarea::placeholder {
+        color: #cfcdcd;
+        font-weight: 500;
+        font-size: 17px;
+    }
+
+    #form-contact__Home-P4 button {
+        padding: 12px;
+        width: 50%;
+        font-weight: 500;
+        font-size: 18px;
     }
 }
