--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -21,78 +21,6 @@
         margin: 1.7rem .4rem 1rem 1rem;
     }
 
-    /* Estilos del componente 'Social Media Grid' */
-    .contenedor-grid-socialMedia__Home-P4 {
-        /* border: 2px solid blue; */
-        margin: 1.5rem 0;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: .4rem;
-    }
-
-    .item-grid-socialMedia__Home-P4 {
-        /*  border: 2px solid red; */
-        background-color: #111111e0;
-        padding: 10px;
-        display: flex;
-        gap: .1rem;
-        align-items: center;
-        text-decoration: none;
-        border-radius: 15px;
-        width: 95%;
-    }
-
-    .cont-logo-socialMed__Home-P4 {
-        /* border: 2px solid green; */
-        padding: 9px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .logo-socialMedia__Home-P4 {
-        /* border: 2px solid red; */
-        width: 1.8rem;
-        height: 1.8rem;
-    }
-
-    .item-grid-socialMedia__Home-P4 h3 {
-        /*  border: 2px solid red; */
-        font-weight: 600;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 14px;
-        margin-top: 10px;
-    }
-
-    .text-instagram {
-        background-image: linear-gradient(to right, #D64EC1, #9e2a91, #9833ac, #c13584, #D64EC1, #833ab4);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
-    }
-
-    /* Estilos para cada contenedor de Social Media */
-    .item-grid-socialMedia__Home-P4:nth-child(1) {
-        color: #C5439D;
-    }
-
-    .item-grid-socialMedia__Home-P4:nth-child(2) {
-        color: #2B7DBE;
-    }
-
-    .item-grid-socialMedia__Home-P4:nth-child(3) {
-        color: #cacaca;
-    }
-
-    .item-grid-socialMedia__Home-P4:nth-child(4) {
-        color: #64C351;
-    }
-
     #container-titleAndLogo__Home-P4 {
         display: flex;
         align-items: center;
@@ -137,5 +65,37 @@
 @media screen and (min-width:414px) {
     #container-general__Home-P4 {
         min-height: 10vh;
+    }
+}
+
+@media screen and (min-width:768px) {
+
+    #titulo-contacto__Home-P4 {
+        /* border: 2px solid red; */
+        color: #334155;
+        font-size: 3.5rem;
+        margin-top: 1.9rem;
+    }
+
+    .hr {
+        border: 2px solid black;
+        margin: 15px 0;
+    }
+
+    .hr:nth-of-type(1) {
+        width: 55%;
+    }
+
+    .hr:nth-of-type(2) {
+        width: 35%;
+    }
+
+    .hr:nth-of-type(3) {
+        width: 15%;
+        margin-bottom: 2rem;
+    }
+
+    #texto-contacto__Home-P4 {
+        font-size: 22px;
     }
 }
