--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -175,7 +175,8 @@
     }
 
     #titulo-proyectos__Home-P3 {
-        font-size: 2.2rem;
+        font-size: 2.6rem;
+        margin-top: 3rem;
     }
 
     .nombre_card_project__Home-P3 {
