--- a/app/styles/partials/_navbar_mobile.scss
+++ b/app/styles/partials/_navbar_mobile.scss
@@ -158,7 +158,14 @@
     }
 
     .item-list-navbar-mobile {
-        font-size: 20px;
+        font-size: 22px;
+        padding: 2.5rem;
+    }
+
+    #icon-nav-mobile{
+        /* border: 2px solid blueviolet; */
+        width: 3.5rem !important;
+        height: 3.5rem !important;
     }
 }
 
