--- a/app/styles/partials/_home_p3.scss
+++ b/app/styles/partials/_home_p3.scss
@@ -153,7 +153,7 @@
         /* border: 2px solid green; */
         flex-direction: column;
         justify-content: center;
-        position: absolute;
+        position: sticky;
         right: 44rem;
         gap: 1.5rem;
     }
