--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,10 +1,11 @@
 @import './partials/page';
 @import './partials/navbar_mobile';
 @import './partials/navbar_desktop';
-@import './partials/home_p1';
+@import './partials/home_p1_mobile';
 @import './partials/home_p2';
 @import './partials/home_p3';
 @import './partials/home_p4';
 @import './partials/formContact';
 @import './partials/socialMediaGrid';
 @import './partials/footer';
+@import './partials/home_p1_desktop';
