--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -607,6 +607,13 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  #container-general__Home_P1 {
+    border: 2px solid red;
+    display: none;
+  }
+}
+
 @media screen and (min-width: 360px) {
   #container-general__Home__P2 {
     /* border: 2px solid green; */
@@ -914,7 +921,8 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    position: absolute;
+    position: -webkit-sticky;
+    position: sticky;
     right: 44rem;
     gap: 1.5rem;
   }
@@ -1408,6 +1416,64 @@
   .text-footer__footer:nth-child(3) {
     font-size: 20px;
     margin-left: 2rem;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 1280px) {
+  #container-general__HomeP1-DESKTOP {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #container-general__HomeP1-DESKTOP {
+    border: 2px solid green;
+    height: 90vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .contenedor-interior__HomeP1-DESKTOP {
+    width: 50%;
+  }
+  .contenedor-interior__HomeP1-DESKTOP:nth-of-type(1) {
+    border: 2px solid red;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #container-image-HomeP1-DESKTOP {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+  }
+  #Image-Main__HomeP1-DESKTOP {
+    border: 2px solid maroon;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
+    border: 2px solid blue;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #title-IgnacioARG__HomeP1-DESKTOP {
+    font-size: 3.5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
   }
 }
 /*# sourceMappingURL=styles.css.map */
