Home P1 Desktop - Casi Listo

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './partials/socialMediaGrid';
 @import './partials/footer';
 @import './partials/home_p1_desktop';
+@import './partials/arabic_spanish_text';
