--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -29,18 +29,15 @@
     }
 
     #container-image-HomeP1-DESKTOP {
+        /* border: 2px solid gray; */
         height: 80%;
         width: 60%;
-
-        backdrop-filter: blur(0px) saturate(199%);
-        -webkit-backdrop-filter: blur(0px) saturate(199%);
-        background-color: rgba(0, 0, 0, 0.918);
-
         margin: 2rem;
         z-index: 1;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
+        cursor: pointer;
     }
 
     #Image-Main__HomeP1-DESKTOP {
@@ -55,47 +52,11 @@
 
     .TranslateElement {
         transition: .5s ease;
-        transform: translate(450px, 0px);
+        transform: translate(300px, 0px);
         width: 32% !important;
         object-position: -99px;
+        filter: grayscale(20%);
     }
-
-    #text-main__HomeP1-DESKTOP {
-        position: absolute;
-    }
-
-    #lista__HomeP1-DESKTOP {
-        /* border: 2px solid blue; */
-        position: absolute;
-        height: 30rem;
-        min-width: 14rem;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 1rem;
-        margin-left: 1rem;
-        z-index: 1;
-
-    }
-
-    .item-li__HomeP1-DESKTOP {
-        list-style: inside;
-        z-index: 1;
-        padding: .8rem;
-
-        border-radius: 60px;
-        background: #525151;
-        box-shadow: inset 6px 6px 11px #474646,
-            inset -6px -6px 11px #5d5c5c;
-
-
-        border-radius: 20px;
-        font-family: 13px;
-        font-weight: 300;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-
 
     //? Clases Contenedor 2
     .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
