--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1446,22 +1446,21 @@
             justify-content: center;
   }
   #container-image-HomeP1-DESKTOP {
+    /* border: 2px solid gray; */
     height: 80%;
     width: 60%;
-    backdrop-filter: blur(0px) saturate(199%);
-    -webkit-backdrop-filter: blur(0px) saturate(199%);
-    background-color: rgba(0, 0, 0, 0.918);
     margin: 2rem;
     z-index: 1;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    cursor: pointer;
   }
   #Image-Main__HomeP1-DESKTOP {
     /* border: 2px solid maroon; */
@@ -1477,46 +1476,13 @@
   .TranslateElement {
     -webkit-transition: .5s ease;
     transition: .5s ease;
-    -webkit-transform: translate(450px, 0px);
-            transform: translate(450px, 0px);
+    -webkit-transform: translate(300px, 0px);
+            transform: translate(300px, 0px);
     width: 32% !important;
     -o-object-position: -99px;
        object-position: -99px;
-  }
-  #text-main__HomeP1-DESKTOP {
-    position: absolute;
-  }
-  #lista__HomeP1-DESKTOP {
-    /* border: 2px solid blue; */
-    position: absolute;
-    height: 30rem;
-    min-width: 14rem;
-    color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    padding: 1rem;
-    margin-left: 1rem;
-    z-index: 1;
-  }
-  .item-li__HomeP1-DESKTOP {
-    list-style: inside;
-    z-index: 1;
-    padding: .8rem;
-    border-radius: 60px;
-    background: #525151;
-    -webkit-box-shadow: inset 6px 6px 11px #474646, inset -6px -6px 11px #5d5c5c;
-            box-shadow: inset 6px 6px 11px #474646, inset -6px -6px 11px #5d5c5c;
-    border-radius: 20px;
-    font-family: 13px;
-    font-weight: 300;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-filter: grayscale(20%);
+            filter: grayscale(20%);
   }
   .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
     /* border: 2px solid blue; */
@@ -1538,6 +1504,32 @@
     font-size: 3.5rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container-languaje-ArabicSpanish__HomeP1 {
+    border: 2px solid red;
+    width: 25rem;
+    position: absolute;
+    height: 25rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .spanish-text {
+    text-align: center;
+  }
+  .arabic-text {
+    text-align: center;
+    font-size: 1.4rem;
+    margin: 0 2.5rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
