--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -38,6 +38,8 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        margin-left: 10rem;
+        margin-top: 4.5rem;
     }
 
     #Image-Main__HomeP1-DESKTOP {
@@ -51,7 +53,7 @@
     }
 
     .TranslateElement {
-        transition: .5s ease;
+        transition: 1s ease;
         transform: translate(300px, 0px);
         width: 32% !important;
         object-position: -99px;
